--- a/Teletrabajo/Site.Master
+++ b/Teletrabajo/Site.Master
@@ -4,69 +4,146 @@
 
 <html lang="en">
 <head runat="server">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%: Page.Title %> - Mi aplicación ASP.NET</title>
+    <title>Teletrabajo</title>
 
-    <asp:PlaceHolder runat="server">
-        <%: Scripts.Render("~/bundles/modernizr") %>
-    </asp:PlaceHolder>
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.css" rel="stylesheet" />
+    <%-- Estilos con formato UCR  --%>
+    <link href="css/Lanamme.css" rel="stylesheet" />
 
-    <webopt:bundlereference runat="server" path="~/Content/css" />
-    <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <!-- Font Awesome -->
+    <link href="font-awesome/css/font-awesome.css" rel="stylesheet" />
+    <!--Dialogos de Mensaje ref:https://nakupanda.github.io/bootstrap3-dialog/#available-options -->
+    <link href="css/bootstrap-dialog.css" rel="stylesheet" />
 
+    <%--<script src='<%=Page.ResolveUrl("~/Scripts/jquery-1.9.1.js") %>'></script>--%>
+    <script src='<%=Page.ResolveUrl("~/Scripts/jquery-1.12.4.js") %>'></script>
+    <script src='<%=Page.ResolveUrl("~/Scripts/jquery-ui.js") %>'></script>
+    <!-- Table -->
+    <link href="Content/DataTables/datatables.min.css" rel="stylesheet" />
+    <script src='<%=Page.ResolveUrl("~/Scripts/datatables.min.js") %>'></script>
+    <%--<script src='<%=Page.ResolveUrl("~/Scripts/dataSourcePlugins.js") %>'></script>--%>
+
+    <script src='<%=Page.ResolveUrl("~/Scripts/bootstrap-dialog.js") %>'></script>
+    <script src='<%=Page.ResolveUrl("~/Scripts/Dialogo.js") %>'></script>
+
+    <asp:ContentPlaceHolder ID="HeadContent" runat="server">
+    </asp:ContentPlaceHolder>
 </head>
 <body>
-    <form runat="server">
-        <asp:ScriptManager runat="server">
-            <Scripts>
-                <%--To learn more about bundling scripts in ScriptManager see https://go.microsoft.com/fwlink/?LinkID=301884 --%>
-                <%--Framework Scripts--%>
-                <asp:ScriptReference Name="MsAjaxBundle" />
-                <asp:ScriptReference Name="jquery" />
-                <asp:ScriptReference Name="bootstrap" />
-                <asp:ScriptReference Name="WebForms.js" Assembly="System.Web" Path="~/Scripts/WebForms/WebForms.js" />
-                <asp:ScriptReference Name="WebUIValidation.js" Assembly="System.Web" Path="~/Scripts/WebForms/WebUIValidation.js" />
-                <asp:ScriptReference Name="MenuStandards.js" Assembly="System.Web" Path="~/Scripts/WebForms/MenuStandards.js" />
-                <asp:ScriptReference Name="GridView.js" Assembly="System.Web" Path="~/Scripts/WebForms/GridView.js" />
-                <asp:ScriptReference Name="DetailsView.js" Assembly="System.Web" Path="~/Scripts/WebForms/DetailsView.js" />
-                <asp:ScriptReference Name="TreeView.js" Assembly="System.Web" Path="~/Scripts/WebForms/TreeView.js" />
-                <asp:ScriptReference Name="WebParts.js" Assembly="System.Web" Path="~/Scripts/WebForms/WebParts.js" />
-                <asp:ScriptReference Name="Focus.js" Assembly="System.Web" Path="~/Scripts/WebForms/Focus.js" />
-                <asp:ScriptReference Name="WebFormsBundle" />
-                <%--Site Scripts--%>
-            </Scripts>
-        </asp:ScriptManager>
+    <form id="form1" runat="server">
+        <div class="wrapper">
+            <div class="logos">
+                <nav>
+                    <div class="container-fluid">
+                        <!-- Brand and toggle get grouped for better mobile display -->
+                        <div class="navbar-header">
+                            <a class="left" href="https://fundacionucr.ac.cr/">
+                                <img src='<%=Page.ResolveUrl("~/Imagenes/fundevi.svg") %>' />
+                            </a>
+                        </div>
+                        <!-- Collect the nav links, forms, and other content for toggling -->
+                        <div>
+                            <div class="navbar-header navbar-right">
+                                <div class="bottom-aligner">
+                                    <div class="bottom-content">
+                                        <h3 style="font-family: 'Arial Rounded MT Bold'; color: #FFFFFF;">Sistema de Gestión de Teletrabajo</h3>
+                                    </div>
+                                </div>
+                                <a href="http://www.lanamme.ucr.ac.cr/">
+                                    <img src='<%=Page.ResolveUrl("~/Imagenes/logoUCR.png") %>' /></a>
+                            </div>
+                        </div>
+                        <!-- /.navbar-collapse -->
+                    </div>
+                    <!-- /.container-fluid -->
+                </nav>
+            </div>
 
-        <div class="navbar navbar-inverse navbar-fixed-top">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" runat="server" href="~/">Nombre de la aplicación</a>
-                </div>
-                <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
-                        <li><a runat="server" href="~/">Inicio</a></li>
-                        <li><a runat="server" href="~/About">Acerca de</a></li>
-                        <li><a runat="server" href="~/Contact">Contacto</a></li>
-                    </ul>
+            <div id="menu" class=" menu" runat="server">
+                <div class="container">
+                    <div class="navbar-collapse collapse">
+                        <ul class="nav navbar-nav">
+                            <li><a href='<%=Page.ResolveUrl("~/Default.aspx") %>' style="color: white">Teletrabajo</a></li>
+                            <li><a href='<%=Page.ResolveUrl("~/Login.aspx") %>' style="color: white">Login</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="container body-content">
-            <asp:ContentPlaceHolder ID="MainContent" runat="server">
-            </asp:ContentPlaceHolder>
-            <hr />
-            <footer>
-                <p>&copy; <%: DateTime.Now.Year %> - Mi aplicación ASP.NET</p>
-            </footer>
-        </div>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
+                <%------------------------------MENU DE ADMINISTRADOR--------------------------%>
+                <div id="MenuFundevi" class="menu hidden" runat="server">
+                    <ul class="nav navbar-nav">
+                        <li class="dropdown">
+                            <%-----------------------PESTAÑAS-----------------------%>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Catalogos<span class="caret"></span></a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li><a href='<%=Page.ResolveUrl("~/") %>'>Unidad de Trabajo</a></li>
+                            </ul>
+                        </li>
+                        <li class="dropdown" aria-expanded="true">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Funcionarios<span class="caret"></span></a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li><a href='<%=Page.ResolveUrl("~/") %>'>Funcionario</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+                <%------------------------------FIN DE LOS MENU ADMINISTRADOR ---------------------------%>
 
+                <%------------------------------MENU DE USUARIO--------------------------%>
+                <div id="MenuUsuario" class="menu hidden" runat="server">
+                    <ul class="nav navbar-nav">
+                        <%-- <li class="dropdown" aria-expanded="true">
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Solicitudes<span class="caret"></span></a>
+                                        <ul class="dropdown-menu" role="menu">                                                                                                                              
+                                            <li><a href='<%=Page.ResolveUrl("~/SolicitudesConsumo/AdministrarSolicitudesFuncionario.aspx") %>'>Solicitudes Funcionario</a></li>                                            
+                                        </ul>
+                                    </li> --%>
+                        <%-- <li>
+                                        <a href='<%=Page.ResolveUrl("~/Default.aspx") %>'>Ayuda</a>                                        
+                                    </li>--%>
+                    </ul>
+                </div>
+                <%------------------------------FIN DE LOS MENU USUARIO ---------------------------%>
+                <ul class="nav navbar-nav navbar-right hidden">
+                    <li>
+                        <a id="username" class="hidden-sm hidden-xs" runat="server">Bienvenid@</a>
+                    </li>
+
+                    <li>
+                        <asp:Button ID="BtnSalir" runat="server" CssClass="btn btn-primary" OnClick="BtnSalir_Click" Text="Salir" CausesValidation="False" UseSubmitBehavior="False" />
+                    </li>
+                </ul>
+            </div>
+            <div class="contenido">
+                <%--Elementos para cada pagina --%>
+                <asp:ContentPlaceHolder ID="MainContent" runat="server">
+                </asp:ContentPlaceHolder>
+                <div class="modal modal-sm modal-static fade" id="ModalAlerta" role="alertdialog">
+                    <div class="modal-dialog">
+                    </div>
+                </div>
+            </div>
+            <div class="piePagina">
+                <h6 style="color: #fff; text-align: center;">Derechos Reservados Fundación de la Universidad de Costa Rica <%: DateTime.Now.Year %> ©</h6>
+                <h6 style="color: #fff; text-align: center;">Desarrollado por Laboratorio Nacional de Materiales y Modelos Estructurales</h6>
+            </div>
+        </div>
+        <div style="display: none">
+            <asp:Label ID="mensaje" Text="" runat="server"></asp:Label>
+            <asp:Label runat="server" ID="alert" Text="" Visible="true"></asp:Label>
+        </div>
+        <!--  Bootstrap -->
+        <script src='<%=Page.ResolveUrl("~/Scripts/bootstrap.js") %>'></script>
+        <script src='<%=Page.ResolveUrl("~/Scripts/bootstrap-dialog.js") %>'></script>
+        <!-- Bootstrap PDF Viewer solo para visualizar archivos -->
+        <script src='<%=Page.ResolveUrl("~/Scripts/pdf.js") %>'></script>
     </form>
+    <asp:ContentPlaceHolder ID="ScriptContent" runat="server">
+    </asp:ContentPlaceHolder>
 </body>
 </html>
